tests/baselines/reference/importDeclWithClassModifiers.errors.txt
==== tests/cases/compiler/importDeclWithClassModifiers.ts (6 errors) ====
    module x {
        interface c {
        }
    }
    export public import a = x.c;
           ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2305: Module 'x' has no exported member 'c'.
    export private import b = x.c;
           ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2305: Module 'x' has no exported member 'c'.
    export static import c = x.c;
           ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2305: Module 'x' has no exported member 'c'.
    var b: a;
    